feat: added welcome page (draft)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
     <title>Hobbit AI</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div id="main-content" class="border-style">
+        <div>
+            <h1>Jericko Bacar</h1>
+            <p>BS Computer Science | University of the Philippines Los Baños</p>
+            <p>Manila, Philippines</p>
+            <p>FullStack Dev.</p>
+        </div>
+        <img src="db/image-1.jpg" alt="Profile" 
+        style=  "height: 200px; width: 200px;
+                border-radius: 50%;
+        object-position: center bottom; 
+                object-fit: cover;
+                flex-shrink: 0">
+    </div>
+    <div id="main-navbar">
+        <div>About Me</div>
+        <div>Projects</div>
+        <div>Plugs</div>
+        <div>Contact Me</div>
+    </div>
 </body>
 </html>
