feat: added main-page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index-style.css">
+    <script src="index-script.js"></script>
     <title>Hobbit AI</title>
 </head>
 <body>
-    <div id="main-content" class="border-style">
+    <div id="main-content">
         <div>
             <h1>Jericko Bacar</h1>
             <p>BS Computer Science | University of the Philippines Los Baños</p>
@@ -24,12 +26,6 @@
         object-position: center bottom; 
                 object-fit: cover;
                 flex-shrink: 0">
-    </div>
-    <div id="main-navbar">
-        <div>About Me</div>
-        <div>Projects</div>
-        <div>Plugs</div>
-        <div>Contact Me</div>
     </div>
 </body>
 </html>
