fix: positions and sizes of left and right content

--- a/main-page.html
+++ b/main-page.html
@@ -111,7 +111,46 @@
         </main>
     </div>
     <div id="right-content-container">
-        <div>hello</div>
+        <div>Hello, It's nice to see you here</div>
+        <div>Programming Languages</div>
+        <div>Skills</div>
+        <div>Experiences</div>
+        <div class="projects-container">
+                <div class="projects-header">
+                    <div class="work-title">
+                        <div class="circle" style="width: 5px; height: 5px;"></div>
+                        <h4 style="margin: 0;">Projects</h4>
+                    </div>
+                </div>
+                <div class="projects-summary">
+                    <div class="individual-projects">
+                        <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                        <div class="individual-projects-description">
+                            <h4>Publicity Materials</h4>
+                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                        </div>
+                        <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                    </div>
+                    <div class="individual-projects">
+                        <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                        <div class="individual-projects-description">
+                            <h4>Publicity Materials</h4>
+                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                        </div>
+                        <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                    </div>
+                    <div class="individual-projects">
+                        <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                        <div class="individual-projects-description">
+                            <h4>Publicity Materials</h4>
+                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                        </div>
+                        <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                    </div>
+                </div>
+            </div>
+        <div>Who am i?</div>
+        <div>Want to avail my services?</div>
     </div>
 </body>
 </html>
