feat: added currently active, programming languages, skills

--- a/main-page.html
+++ b/main-page.html
@@ -111,44 +111,94 @@
         </main>
     </div>
     <div id="right-content-container">
-        <div>Hello, It's nice to see you here</div>
-        <div>Programming Languages</div>
-        <div>Skills</div>
-        <div>Experiences</div>
-        <div class="projects-container">
-                <div class="projects-header">
-                    <div class="work-title">
-                        <div class="circle" style="width: 5px; height: 5px;"></div>
-                        <h4 style="margin: 0;">Projects</h4>
-                    </div>
+        <div class="right-home">
+            <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 0 15px;">
+                <div class="general-title" style="display: flex; justify-content: start;">
+                    <div class="circle" style="width: 5px; height: 5px;"></div>
+                    <h4>Currently Active</h4>
                 </div>
-                <div class="projects-summary">
-                    <div class="individual-projects">
-                        <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
-                        <div class="individual-projects-description">
-                            <h4>Publicity Materials</h4>
-                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                <div class="projects-container">
+                    <div class="projects-summary">
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Mobile Development</h4>
+                                <p style="color: #cbcbcb;">Dart, Flutter</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
                         </div>
-                        <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                    </div>
-                    <div class="individual-projects">
-                        <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
-                        <div class="individual-projects-description">
-                            <h4>Publicity Materials</h4>
-                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Web Development</h4>
+                                <p style="color: #cbcbcb;">MERN Stack, Figma, Canva</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
                         </div>
-                        <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                    </div>
-                    <div class="individual-projects">
-                        <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
-                        <div class="individual-projects-description">
-                            <h4>Publicity Materials</h4>
-                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Machine-level Programming</h4>
+                                <p style="color: #cbcbcb;">Assembly</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
                         </div>
-                        <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="right-programming-languages">
+            <div style="display: flex; flex-direction: column; justify-content: space-between; align-items: start; padding: 0 15px;">
+                <div class="general-title">
+                    <div class="circle" style="width: 5px; height: 5px;"></div>
+                    <h4>Programming Languages</h4>
+                </div>
+            </div>
+            <div class="list-container">
+                <img src="/db/python-img.png" alt="python">
+                <img src="/db/js-img.png" alt="javascript">
+                <img src="/db/c-img.png" alt="c">
+                <img src="/db/r-img.png" alt="r">
+                <img src="/db/java-img.png" alt="java">
+            </div>
+        </div>
+        <div class="right-skills">
+            <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 0 15px;">
+                <div class="general-title" style="display: flex; justify-content: start;">
+                    <div class="circle" style="width: 5px; height: 5px;"></div>
+                    <h4>Skills</h4>
+                </div>
+                <div class="projects-container">
+                    <div class="projects-summary">
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Google Workspace</h4>
+                                <p style="color: #cbcbcb;">Drive, Docs, Sheets, Slides (With extension/Plug-in automation)</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Music Production</h4>
+                                <p style="color: #cbcbcb;">Bandlab</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Prompt Engineering</h4>
+                                <p style="color: #cbcbcb;">ChatGPT, CursorAI, GeminiAI</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>Experiences</div>
         <div>Who am i?</div>
         <div>Want to avail my services?</div>
     </div>
