feat: skills, experiences, contact me

--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
     <title>Hobbit AI</title>
 </head>
 <body>
-    <div id="main-content">
-        <div>
-            <h1>Jericko Bacar</h1>
-            <p>BS Computer Science | University of the Philippines Los Baños</p>
-            <p>Manila, Philippines</p>
-            <p>FullStack Dev.</p>
+    <a href="./main-page.html">
+        <div id="main-content">
+            <div>
+                <h1>Jericko Bacar</h1>
+                <p>BS Computer Science | University of the Philippines Los Baños</p>
+                <p>Manila, Philippines</p>
+                <p>FullStack Dev.</p>
+            </div>
+            <img src="db/image-1.jpg" alt="Profile" 
+            style=  "height: 200px; width: 200px;
+                    border-radius: 50%;
+            object-position: center bottom; 
+                    object-fit: cover;
+                    flex-shrink: 0">
         </div>
-        <img src="db/image-1.jpg" alt="Profile" 
-        style=  "height: 200px; width: 200px;
-                border-radius: 50%;
-        object-position: center bottom; 
-                object-fit: cover;
-                flex-shrink: 0">
-    </div>
+    </a>
 </body>
 </html>
