--- a/main-page.html
+++ b/main-page.html
@@ -16,7 +16,7 @@
     <div id="left-content-container">
         <nav class="nav-bar card-style">
             <div class="left-section">
-                <a href="index.html">
+                <a href="./index.html">
                     <i class="fa-solid fa-house" style="color: white; background-color: #333333;"></i>
                 </a>
                 <a href="">
@@ -30,10 +30,12 @@
                 </a>
             </div>
             <div class="right-section">
-                <div class="hire-me">
-                    <div class="circle"></div>
-                    <h3>Hire Me</h3>
-                </div>
+                <a href="./index.html">
+                    <div class="hire-me">
+                        <div class="circle"></div>
+                        <h3>Hire Me</h3>
+                    </div>
+                </a>
             </div>
         </nav>
         <main class="card-style" id="left-main-content">
@@ -53,15 +55,18 @@
                     <p>Full Stack Developer from Manila, Philippines.</p>
                     <p>Currently studying at UP Los Baños.</p>
                     <div class="hire-me-and-copy-email">
-                        <div class="hire-me">
-                            <div class="circle" style="width: 10px; height: 10px;"></div>
+                        <a href="../index.html">
+                            <div class="hire-me">
+                                <div class="circle" style="width: 10px; height: 10px;"></div>
                             <h3>Hire Me</h3>
+                        </a>
                         </div>
                         <div class="copy-email">
                             <div class="circle" style="width: 10px; height: 10px;"></div>
                             <h3 style="font-size: 12px;">Copy Email</h3>
                         </div>
                     </div>
+
                 </div>
                 <img src="db/image-1.jpg" alt="Profile" 
                     style=  "height: 150px; width: 150px;
@@ -85,24 +90,24 @@
                     <div class="individual-projects">
                         <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
                         <div class="individual-projects-description">
-                            <h4>Publicity Materials</h4>
-                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                            <h4>Typing Game</h4>
+                            <p style="color: #cbcbcb;">A game where you complete a set of words. Using HTML, CSS, JS.</p>
                         </div>
                         <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
                     </div>
                     <div class="individual-projects">
                         <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
                         <div class="individual-projects-description">
-                            <h4>Publicity Materials</h4>
-                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                            <h4>ICOC PH Website</h4>
+                            <p style="color: #cbcbcb;">A mock website of my Church. Using HTML, CSS, JS.</p>
                         </div>
                         <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
                     </div>
                     <div class="individual-projects">
                         <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
                         <div class="individual-projects-description">
-                            <h4>Publicity Materials</h4>
-                            <p style="color: #cbcbcb;">Product design, Icon design</p>
+                            <h4>Typing Game</h4>
+                            <p style="color: #cbcbcb;">A terminal based game where you complete a set of phrases. A leaderboard with persistence. Using Python.</p>
                         </div>
                         <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
                     </div>
@@ -131,7 +136,7 @@
                             <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
                             <div class="individual-projects-description">
                                 <h4>Web Development</h4>
-                                <p style="color: #cbcbcb;">MERN Stack, Figma, Canva</p>
+                                <p style="color: #cbcbcb;">MERN, Figma, Canva</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
                         </div>
@@ -155,11 +160,11 @@
                 </div>
             </div>
             <div class="list-container">
-                <img src="/db/python-img.png" alt="python">
-                <img src="/db/js-img.png" alt="javascript">
-                <img src="/db/c-img.png" alt="c">
-                <img src="/db/r-img.png" alt="r">
-                <img src="/db/java-img.png" alt="java">
+                <img src="./db/python-img.png" alt="python">
+                <img src="./db/js-img.png" alt="javascript">
+                <img src="./db/c-img.png" alt="c">
+                <img src="./db/r-img.png" alt="r">
+                <img src="./db/java-img.png" alt="java">
             </div>
         </div>
         <div class="right-skills">
@@ -198,9 +203,138 @@
                 </div>
             </div>
         </div>
-        <div>Experiences</div>
-        <div>Who am i?</div>
-        <div>Want to avail my services?</div>
+        <div class="right-projects">
+            <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 0 15px;">
+                <div class="general-title" style="display: flex; justify-content: start;">
+                    <div class="circle" style="width: 5px; height: 5px;"></div>
+                    <h4>Projects</h4>
+                </div>
+                <div class="projects-container">
+                    <div class="projects-summary">
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Typing Game</h4>
+                                <p style="color: #cbcbcb;">A game where you complete a set of words. Using HTML, CSS, JS.</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>ICOC PH Website</h4>
+                                <p style="color: #cbcbcb;">A mock website of my Church. Using HTML, CSS, JS.</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Typing Game</h4>
+                                <p style="color: #cbcbcb;">A terminal based game where you complete a set of phrases. A leaderboard with persistence. Using Python.</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Online Cafe System</h4>
+                                <p style="color: #cbcbcb;">An online system that simulates a real-life cafe. Using Java.</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Project Mitigation</h4>
+                                <p style="color: #cbcbcb;">A program where you select different projects to see if it is feasible. Using R and Rshiny.</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="right-profile">
+            <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 0 15px;">
+                <div class="general-title" style="display: flex; justify-content: start;">
+                    <div class="circle" style="width: 5px; height: 5px;"></div>
+                    <h4>Get to know who I am</h4>
+                </div>
+                <div class="projects-container">
+                    <div class="projects-summary">
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Student</h4>
+                                <p style="color: #cbcbcb;">BS Computer Science | University of the Philippines Los Baños</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Tech & Music Committee </h4>
+                                <p style="color: #cbcbcb;">ICOC Philippines</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Academic Committee</h4>
+                                <p style="color: #cbcbcb;">ACSS of UPLB</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Guitarist</h4>
+                                <p style="color: #cbcbcb;">UP Silakbo</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="right-profile">
+            <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 0 15px;">
+                <div class="general-title" style="display: flex; justify-content: start;">
+                    <div class="circle" style="width: 5px; height: 5px;"></div>
+                    <h4>Want to avail my services?</h4>
+                </div>
+                <div class="projects-container">
+                    <div class="projects-summary">
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Web Development</h4>
+                                <p style="color: #cbcbcb;">HTML, CSS, JS</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Game Development</h4>
+                                <p style="color: #cbcbcb;">Python, Tkinter</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                        <div class="individual-projects">
+                            <div class="circle" style="height: 50px; width: 50px; margin: 10px 0;"></div>
+                            <div class="individual-projects-description">
+                                <h4>Data Analytics</h4>
+                                <p style="color: #cbcbcb;">R, Python</p>
+                            </div>
+                            <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
